--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 			font-size: 1rem;
 			color: #FFF;
 			font-family: 'Open Sans', sans-serif;
-			background: #fed101;
 		}
 		a {
 		    color: #FFF;
@@ -461,9 +460,6 @@
 				width: 100%;
 			}
 		}	
-		iframe html {
-			overflow: hidden;
-			}
 		</style>
 		<script>
 		var map;
@@ -614,6 +610,10 @@
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNGRG65"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->	
+		<div class="banner-wrapper">
+			<a href="https://checkoutpage.co/c/sunday-bakeday/tote-bag"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16"><path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"/></svg> click here to buy my cool merch!
+			</a>
+		</div>
 		<div class="top text-center">
 			<div class="px-2 pt-4 fade-in">
 				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo mx-auto" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
@@ -626,10 +626,162 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="cp-checkout" data-checkout="https://checkoutpage.co/c/sunday-bakeday/tote-bag" scrolling="no" style="margin: auto;width: 100%; max-width: 820px;"></div>
-<script type="text/javascript" src="https://checkoutpage.co/js/overlay.js" defer></script>
+				<div class="row justify-content-center">			
+					<div class="col-12 col-md-10 pt-3">
+						<div class="card">
+							<div class="card-body fade-in">
+								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week</span></h2>
+								<p class="card-text">Bakeday will be back very soon. Sign up below to be the first to know next time it's happening!</p>
+								<div id="mc_embed_signup">
+									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
+										<div id="mc_embed_signup_scroll">									   
+											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
+											<input type="number" name="PHONE" class="required email" value="" id="mce-PHONE" placeholder="phone number (optional)">
+											<div hidden="true"><input type="hidden" name="tags" value="3139784"></div>
+											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
+											<div class="clear"><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+										</div>
+									</form>
+								</div>								
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>			
-		</div>		
+		</div>
+		<div class="bottomWrapper">
+			<div class="container">
+				<div class="bottom pt-5">
+					<div class="pb-4 col-md-12 mx-auto text-center">
+						<h2 class="">how it works</h2>
+						<ol class="mb-0 howitworks text-center">
+							<li class="py-2">
+								<span>Make sure you definitely live in Grand Rapids.</span>
+								<p class="note">There's a map of my delivery zone below.</p>
+							</li>
+							<li class="py-2">
+								<span>Pick any combination of 4 pastries and send me $20.</span>
+								<p class="note">Include your order and address in the message with your payment! Also tell me what buzzer to press if you live in a condo or whatever.</p>
+							</li>
+							<li class="py-2">
+								<span>A box of pastries will be delivered to you on Sunday morning before 10am.</span>
+							</li>
+						</ol>
+					</div>
+				</div> 
+				<hr class="col-2">
+				<div class="pb-3">
+					<div class="py-4 col-md-12 col-lg-8 mx-auto text-center">
+						<h2 class="">order now</h2>
+						<div class="container">
+							<div class="row justify-content-md-center">
+								<div class="col-xs-12 col-md-4 mb-2">
+									<a class="pill" href="https://venmo.com/sundaybakeday" id="venmoPill">
+										<span class="pillTitle mb-0">Venmo</span>
+										<br/>
+										<span>@sundaybakeday</span>
+									</a>
+								</div>
+								<div class="col-xs-12 col-md-4 mb-2">
+									<a class="pill" href="https://cash.app/sundaybakeday" id="cashPill">
+										<span class="pillTitle mb-0">CashApp</span>
+										<br/>
+										<span>$sundaybakeday</span>
+									</a>
+								</div>												
+							</div>
+							<p class="mb-0 pt-3 answer font-italic"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 20 16"><path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/></svg>Venmo and CashApp transactions are private.</p>
+						</div>
+					</div>
+				</div>
+				<hr class="col-2">
+				<div class="py-4 col-md-10 col-lg-8 mx-auto text-center">
+					<h2>faqs</h2>
+					<div class="mb-0 faqs">
+						<div class="mb-3">
+							<h4>"I live on the Mongolian steppe - will you deliver pastries to me?"</h4>
+							<p class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></p><p class="fw-bold">Enter your address below to make sure you're in the delivery zone!</p>
+						</div>
+						<input id="address-one" onClick="this.select();" class="controls mb-3" placeholder="Enter your address here" autocomplete="off" type="text">
+						<div class="collapse mb-3" id="collapseSuccess">Hooray! You're in the delivery zone!</div>
+						<div class="collapse mb-3" id="collapseFail">Oh no! You live too far away. You're welcome to order and pick up though!</div>
+						<div class="mb-3" id="map"></div>
+						<div class="mb-3">
+							<h4>"My nephew is being released from prison after serving 20 years for a crime he didn't commit. Will you bake some pastries for the party?"</h4>
+							<p class="answer">Probably, if I have time. <a href="mailto:orders@sundaybakeday.com">Email me!</a></p>
+						</div>	
+						<div class="mb-3">
+							<h4>"Does bakeday happen every Sunday?"</h4>
+							<p class="answer">No. I have stuff to do and I'm quite lazy. I try to do it every couple of weeks! <a href="http://eepurl.com/hS8rsf">Click here</a> to get an email next time bakeday is happening!</p>
+						</div>	
+						<div class="mb-3">
+							<h4>"Can you tell me EXACTLY what time my pastries will be delivered?"</h4>
+							<p class="answer">Not really but if you ask nicely I'll do my best to give you a ballpark time based on how my delivery route shakes out.</p>
+						</div>							
+						<div class="mb-3">
+							<h4>"I use Venmo like twice a year to pay my babysitter or whatever. How do I order with Venmo?"</h4>
+							<p class="answer">It's easy! Just send $20 plus an extravagant tip to <a href="https://venmo.com/sundaybakeday">@sundaybakeday</a> and include your order and address in the message. Here's an example of a typical order:</p>
+							<p style="font-style: italic;">"#1 #3 #4 #5 please! 420 Diamond Ave SE. Please leave at the side door. Thanks! I love you."</p>
+						</div>							
+						<div class="mb-3">
+							<h4>"I'm from the 1950s and don't have Venmo or CashApp. Do you take cash?"</h4>
+							<p class="answer">Absolutely. Send me your order on <a href="https://www.instagram.com/sunday.bakeday/">Instagram</a> or by <a href="mailto:orders@sundaybakeday.com">email</a>. Just bear in mind that you'll have to get your ass out of bed on Sunday morning to pay me.</p>
+						</div>							
+					</div>
+				</div>
+				<hr class="col-2">
+				<div class="container pt-5">		
+					<div class="row justify-content-center ">				
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+							<a href="https://www.instagram.com/p/CdBj-y-OziC/">
+								<img src="https://i.imgur.com/KlF6Qs3.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+							<a href="https://www.instagram.com/p/CalRoxsrRtg/">
+								<img src="https://i.imgur.com/H7yOZ0s.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+							<a href="https://www.instagram.com/p/CekNLBirVyM/">
+								<img src="https://i.imgur.com/RHrn89k.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+                            <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
+								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+                            </a>
+                       </div>
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+							<a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
+								<img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
+								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>						
+					</div>	
+				</div>
+				<div class="pb-5">
+					<div class="py-4 col-md-7 mx-auto text-center">
+						<h2 class="">contact</h2>
+						<div class="mb-0 contact text-center">
+							<p class="mb-5">The best way to get in touch is probably to <a href="https://www.instagram.com/sunday.bakeday/">message me on Instagram</a> or <a href="mailto:orders@sundaybakeday.com">email me</a>.</p>
+							<a href="https://www.instagram.com/sunday.bakeday/"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="36"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 	</body>
 </html>
 
